--- a/mini-header.html
+++ b/mini-header.html
@@ -1,20 +1,16 @@
-<!-- mini-header.html -->
 <header class="mini-header">
   <img src="logo.png" alt="Logo" class="mini-logo">
   <span class="mini-title">Tra Cứu Học Thuật & AI</span>
 </header>
 <style>
   .mini-header {
-    display: flex; align-items: center; justify-content: flex-start;
-    background: #fff;
-    box-shadow: 0 1.5px 12px #185adb10;
-    height: 53px; min-height: 40px; max-height: 64px;
-    padding: 0 30px;
-    position: sticky; top: 0; left: 0; right: 0;
-    z-index: 20;
+    display: flex; align-items: center;
+    background: #fff; box-shadow: 0 1px 8px #185adb09;
+    height: 48px; min-height: 40px; padding: 0 22px;
     border-bottom: 1.2px solid #e3e9f7;
+    position: sticky; top: 0; left: 0; right: 0; z-index: 30;
   }
-  .mini-logo {width: 32px; height: 32px; border-radius:50%; margin-right: 13px;}
-  .mini-title {font-weight:700; font-size:1.12rem; color:#185adb; letter-spacing:.3px;}
-  @media (max-width:600px){.mini-header{padding:0 9px;}.mini-logo{width:24px;height:24px;}.mini-title{font-size:0.98rem;}}
+  .mini-logo {width: 28px; height: 28px; border-radius:50%; margin-right: 11px;}
+  .mini-title {font-weight:700; font-size:1.07rem; color:#185adb;}
+  @media (max-width:600px){.mini-header{padding:0 8px;}.mini-logo{width:22px;height:22px;}.mini-title{font-size:0.96rem;}}
 </style>
