--- a/chat-ai.html
+++ b/chat-ai.html
@@ -4,64 +4,48 @@
   <meta charset="UTF-8">
   <title>Chat với AI - Trợ Lý Học Tập & AI</title>
   <link rel="icon" type="image/png" href="logo.png">
-  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <style>
     html, body { height: 100%; min-height: 100%; }
     body {
-      background: var(--bg1, #f4f9ff);
+      background: #f4f9ff;
       margin: 0; padding: 0;
-      min-height: 100vh; display: flex; flex-direction: column;
+      min-height: 100vh;
+      font-family: 'Montserrat', Arial, sans-serif;
+      display: flex; flex-direction: column;
     }
+    #mini-header { flex-shrink: 0;}
     main {
       flex: 1 0 auto;
-      display: flex; flex-direction: column;
-      align-items: center; justify-content: flex-start;
-      width: 100%;
-      min-height: 70vh;
-      margin: 0; padding: 0;
+      width: 100%; min-height: 80vh;
+      display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
     }
-    /* Header mini */
-    .mini-header {
-      display: flex; align-items: center;
-      background: #fff;
-      box-shadow: 0 1px 8px #185adb09;
-      height: 50px; min-height: 40px;
-      padding: 0 22px;
-      border-bottom: 1.2px solid #e3e9f7;
-      position: sticky; top: 0; left: 0; right: 0; z-index: 30;
-    }
-    .mini-logo {width: 29px; height: 29px; border-radius:50%; margin-right: 10px;}
-    .mini-title {font-weight:700; font-size:1.09rem; color:#185adb;}
-    /* Box chat gần như full width */
     .chat-main-card {
-      width: 100%; max-width: 1020px;
-      margin: 32px auto 24px auto;
+      margin: 28px 0 24px 0;
+      width: 97vw; max-width: 1200px; min-height: 670px;
       background: #fff;
-      border-radius: 23px;
-      box-shadow: 0 6px 36px #185adb13;
-      display: flex; flex-direction: column;
-      padding: 0;
+      border-radius: 24px;
+      box-shadow: 0 8px 32px #185adb1a;
+      display: flex; flex-direction: column; padding: 0;
     }
     .mini-title-bar {
-      font-weight: 700; color: #185adb;
-      padding: 16px 0 0 0; text-align: left; font-size: 1.08rem;
-      letter-spacing: .2px; margin-left:38px; margin-bottom:2px;
+      font-weight: 700; color: #185adb; padding: 15px 0 0 0;
+      text-align: left; font-size: 1.08rem; margin-left:38px; margin-bottom:2px;
       display: flex; align-items: center; gap: 8px;
     }
-    .mini-title-bar .icon {width: 22px; height: 22px; border-radius: 50%; background: #eaf3ff;}
+    .mini-title-bar .icon {width: 23px; height: 23px; border-radius: 50%; background: #eaf3ff;}
     .api-btns-group {
-      margin-left:auto; display:flex; gap:7px; font-size:0.95rem;
+      margin-left:auto; display:flex; gap:7px; font-size:0.98rem;
     }
     .api-btn, .getkey-btn {
       background: #f4f7fe; color: #185adb; border: 1px solid #b7d2fa; border-radius: 7px;
-      padding: 4px 13px; font-weight: 600; font-size: 0.99rem; cursor: pointer; transition: background 0.13s; text-decoration:none;
-      display: flex; align-items: center; gap: 5px; margin-left:5px;
+      padding: 4px 12px; font-weight: 600; font-size: 0.97rem; cursor: pointer; transition: background 0.13s;
+      display: flex; align-items: center; gap: 5px; margin-left:5px; text-decoration:none;
     }
     .api-btn:hover, .getkey-btn:hover {background:#e7f0ff;}
     .mode-switcher {
-      display: flex; gap: 0; margin: 0 0 7px 0; border-bottom:1.3px solid #e5eefa; background: #fff;
-      justify-content: flex-start; padding-left:38px;
+      display: flex; gap: 0; margin: 0 0 7px 0; border-bottom:1.3px solid #e5eefa;
+      background: #fff; justify-content: flex-start; padding-left:38px;
     }
     .mode-btn {
       border: none; background: none;
@@ -75,17 +59,14 @@
     }
     .chat-body {
       flex: 1; padding: 0; overflow-y: auto; background: #f7faff;
-      border-radius: 0 0 23px 23px;
-      display: flex; flex-direction: column;
-      min-height: 420px;
+      border-radius: 0 0 24px 24px; display: flex; flex-direction: column; min-height: 420px;
     }
     .chat-messages {
-      padding: 36px 48px 8px 48px;
+      padding: 34px 48px 8px 48px;
       overflow-y: auto; flex: 1;
-      min-height: 340px;
+      min-height: 330px;
       font-size: 1.11rem;
-      display: flex; flex-direction: column;
-      gap: 7px;
+      display: flex; flex-direction: column; gap: 7px;
     }
     .msg-row {display: flex;}
     .msg-bubble {
@@ -112,13 +93,13 @@
     .chat-input-bar {
       display: flex; align-items: flex-end;
       gap: 13px; background: #f4f7fa;
-      padding: 24px 44px 32px 44px;
-      border-radius: 0 0 23px 23px;
+      padding: 20px 44px 28px 44px;
+      border-radius: 0 0 24px 24px;
       border-top: 1.3px solid #e7f0ff;
       box-shadow: 0 0.5px 0 #e6eef9;
     }
     .chat-input-bar input {
-      flex: 1; font-size: 1.15rem; padding: 16px 18px; border-radius: 16px;
+      flex: 1; font-size: 1.15rem; padding: 15px 17px; border-radius: 16px;
       border: 1.7px solid #bdd1f6; outline:none; box-shadow:0 1.5px 8px #185adb09;
       background: #fff; transition: border 0.16s;
     }
@@ -132,23 +113,28 @@
       transition: background 0.13s;
     }
     .chat-input-bar button:active {background:#153772;}
-    /* Footer */
-    #footer { flex-shrink: 0; margin-top: 24px; }
+    /* Popup key */
+    .popup-api-bg {position:fixed;left:0;top:0;width:100vw;height:100vh;background:#0007;z-index:999;display:flex;align-items:center;justify-content:center;}
+    .popup-api-box {background:#fff;border-radius:13px;padding:32px 34px;box-shadow:0 10px 50px #185adb20;min-width:300px;max-width:94vw;text-align:center;}
+    .popup-api-box label {font-size:1.14rem;color:#185adb;font-weight:700;}
+    .popup-api-box input {margin-top:14px;padding:11px 13px;border-radius:8px;border:1.5px solid #bdd1f6;font-size:1.08rem;width:90%;max-width:340px;}
+    .popup-api-box .popup-btns {margin-top:22px;display:flex;justify-content:center;gap:17px;}
+    .popup-api-box button {padding:10px 23px;border-radius:8px;font-weight:600;font-size:1.08rem;border:none;cursor:pointer;background:#185adb;color:#fff;transition:background 0.15s;}
+    .popup-api-box button.cancel {background:#e7eaf6;color:#185adb;}
+    .popup-api-box button:active {background:#133b86;}
+    .popup-api-box .popup-desc {font-size:.98rem;color:#888;margin:7px 0 16px 0;}
+    #footer { flex-shrink: 0; margin-top: 18px; }
     @media (max-width:1200px) {.chat-main-card{max-width:99vw;}}
     @media (max-width:750px) {
-      .chat-main-card {margin:9px 2vw; border-radius:17px;}
-      .chat-messages {padding:13px 2vw 7px 2vw;}
-      .chat-input-bar {padding:7px 2vw 14px 2vw; border-radius:0 0 17px 17px;}
+      .chat-main-card {margin:8px 0; border-radius:13px;}
+      .chat-messages {padding:11px 2vw 7px 2vw;}
+      .chat-input-bar {padding:7px 2vw 12px 2vw; border-radius:0 0 13px 13px;}
       .mode-switcher{padding-left:0;}
     }
   </style>
 </head>
 <body>
-  <!-- Header mini -->
-  <header class="mini-header">
-    <img src="logo.png" alt="Logo" class="mini-logo">
-    <span class="mini-title">Tra Cứu Học Thuật & AI</span>
-  </header>
+  <div id="mini-header"></div>
   <main>
     <div class="chat-main-card">
       <div class="mini-title-bar">
@@ -181,12 +167,25 @@
       </div>
     </div>
   </main>
-  <!-- Footer luôn hiện rõ ràng cuối body -->
   <div id="footer"></div>
+  <!-- Popup nhập API Key luôn đúng tab, fix lỗi không ấn được -->
+  <div class="popup-api-bg" id="popup-api" style="display:none;">
+    <div class="popup-api-box">
+      <label id="popup-label"></label>
+      <div class="popup-desc" id="popup-desc"></div>
+      <input id="popup-api-key" type="password" placeholder="">
+      <div class="popup-btns">
+        <button onclick="saveAPIKey()">Lưu Key</button>
+        <button class="cancel" onclick="closeAPIKeyPopup()">Hủy</button>
+        <button class="cancel" onclick="removeAPIKey()" style="background:#ffebe7;color:#c44;">Xóa key</button>
+      </div>
+    </div>
+  </div>
   <script>
-    // Import footer (nếu cần lấy từ file ngoài)
+    // Import header/footer nhỏ
+    fetch('mini-header.html').then(r=>r.text()).then(d=>{document.getElementById('mini-header').innerHTML=d});
     fetch('footer.html').then(r=>r.text()).then(d=>{document.getElementById('footer').innerHTML=d});
-    // Các hàm JS xử lý tab và API key như các ví dụ trước (renderApiBtns, switchMode, ... như trên)
+    // Tabs & API Key
     let chatMode = 'chatbase';
     function renderApiBtns(mode) {
       const group = document.getElementById('api-btns-group');
@@ -218,9 +217,122 @@
       renderApiBtns(mode);
       scrollToBottom();
     }
-    // ==== Các hàm nhập API key, chat GPT/Gemini ... giữ nguyên ====
-    // ... (copy lại phần JS từ các mẫu trước) ...
-    // Khởi tạo đúng nút key
+    // API Key lưu riêng từng loại
+    function getAPIKey(type) {
+      if (type==='gpt') return localStorage.getItem('openai_api_key')||'';
+      if (type==='gemini') return localStorage.getItem('gemini_api_key')||'';
+      return '';
+    }
+    function setAPIKey(type, key) {
+      if (type==='gpt') localStorage.setItem('openai_api_key', key.trim());
+      if (type==='gemini') localStorage.setItem('gemini_api_key', key.trim());
+    }
+    function removeAPIKey() {
+      if (window.apiKeyType === 'gpt') localStorage.removeItem('openai_api_key');
+      if (window.apiKeyType === 'gemini') localStorage.removeItem('gemini_api_key');
+      document.getElementById('popup-api-key').value = '';
+      alert('Đã xóa API key khỏi trình duyệt.');
+      closeAPIKeyPopup();
+    }
+    function openAPIKeyPopup(type) {
+      window.apiKeyType = type;
+      const box = document.getElementById('popup-api');
+      box.style.display = 'flex';
+      let label = "API Key";
+      let desc = "";
+      let ph = "";
+      if(type==='gpt') {
+        label = "Nhập OpenAI API Key (GPT)";
+        desc = "Tạo key ở <a href='https://platform.openai.com/settings/organization/api-keys' target='_blank'>https://platform.openai.com/...</a><br>(Ví dụ: sk-...)";
+        ph = "sk-...";
+      }
+      if(type==='gemini') {
+        label = "Nhập Google Gemini API Key";
+        desc = "Tạo key ở <a href='https://aistudio.google.com/apikey' target='_blank'>https://aistudio.google.com/apikey</a><br>(Ví dụ: AIza...)";
+        ph = "AIza...";
+      }
+      document.getElementById('popup-label').innerHTML = label;
+      document.getElementById('popup-desc').innerHTML = desc + "<br>(Chỉ lưu trên trình duyệt, không gửi đi đâu)";
+      document.getElementById('popup-api-key').placeholder = ph;
+      document.getElementById('popup-api-key').value = getAPIKey(type);
+      setTimeout(()=>{document.getElementById('popup-api-key').focus()}, 120); // Đảm bảo focus
+    }
+    function closeAPIKeyPopup() {document.getElementById('popup-api').style.display = 'none';}
+    function saveAPIKey() {
+      let val = document.getElementById('popup-api-key').value;
+      if(val.length < 10) return alert('API key không hợp lệ!');
+      setAPIKey(window.apiKeyType, val);
+      alert('Đã lưu API key vào trình duyệt!');
+      closeAPIKeyPopup();
+    }
+    // Chat GPT/Gemini
+    let gptMsgs = [], geminiMsgs = [];
+    async function sendMsgGPT() {
+      let key = getAPIKey('gpt');
+      let msg = document.getElementById('userMsg-gpt').value.trim();
+      if (!key) { openAPIKeyPopup('gpt'); return; }
+      if (!msg) return;
+      gptMsgs.push({role:'user',content:msg});
+      renderChat('gpt-chat', gptMsgs);
+      document.getElementById('userMsg-gpt').value = '';
+      gptMsgs.push({role:'assistant',content:'<i>Đang trả lời...</i>'});
+      renderChat('gpt-chat', gptMsgs); scrollToBottom();
+      try {
+        let res = await fetch('https://api.openai.com/v1/chat/completions', {
+          method: 'POST',
+          headers: {'Content-Type': 'application/json','Authorization': `Bearer ${key}`},
+          body: JSON.stringify({
+            model: "gpt-3.5-turbo",
+            messages: [{role:"system",content:"Bạn là trợ lý AI học tập, trả lời ngắn gọn, thân thiện."},
+              ...gptMsgs.filter(m=>m.role==='user')]
+          })
+        });
+        let data = await res.json();
+        gptMsgs.pop();
+        let reply = data.choices?.[0]?.message?.content || "Có lỗi xảy ra!";
+        gptMsgs.push({role:'assistant',content:reply});
+        renderChat('gpt-chat', gptMsgs); scrollToBottom();
+      } catch (e) {gptMsgs.pop();gptMsgs.push({role:'assistant',content:'Lỗi gọi API!'});renderChat('gpt-chat', gptMsgs);}
+    }
+    async function sendMsgGemini() {
+      let key = getAPIKey('gemini');
+      let msg = document.getElementById('userMsg-gemini').value.trim();
+      if (!key) { openAPIKeyPopup('gemini'); return; }
+      if (!msg) return;
+      geminiMsgs.push({role:'user',content:msg});
+      renderChat('gemini-chat', geminiMsgs);
+      document.getElementById('userMsg-gemini').value = '';
+      geminiMsgs.push({role:'assistant',content:'<i>Đang trả lời...</i>'});
+      renderChat('gemini-chat', geminiMsgs); scrollToBottom();
+      try {
+        let URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${key}`;
+        let res = await fetch(URL, {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify({contents: [{parts: [{text: msg}]}]})
+          }
+        );
+        let data = await res.json();
+        geminiMsgs.pop();
+        let reply = data.candidates?.[0]?.content?.parts?.[0]?.text || "Có lỗi xảy ra!";
+        geminiMsgs.push({role:'assistant',content:reply});
+        renderChat('gemini-chat', geminiMsgs); scrollToBottom();
+      } catch (e) {geminiMsgs.pop();geminiMsgs.push({role:'assistant',content:'Lỗi gọi API!'});renderChat('gemini-chat', geminiMsgs);}
+    }
+    function renderChat(boxId, msgs) {
+      let html = '';
+      for(let m of msgs){
+        let user = (m.role==='user');
+        html += `<div class="msg-row ${user?'msg-user':'msg-ai'}"><div class="msg-bubble">${m.content}</div></div>`;
+      }
+      document.getElementById(boxId).innerHTML = html;
+    }
+    function scrollToBottom() {
+      setTimeout(()=>{
+        document.querySelectorAll('.chat-messages').forEach(box=>{box.scrollTop = box.scrollHeight+77;});
+      }, 80);
+    }
+    // Luôn khởi tạo đúng key tab
     window.onload = ()=>{renderApiBtns('chatbase');}
   </script>
 </body>
