--- a/chat-ai.html
+++ b/chat-ai.html
@@ -2,13 +2,14 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Chat với AI - Trợ Lý Học Tập & AI</title>
+  <title>Chat AI - Tra Cứu Học Thuật & AI</title>
   <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <style>
+    :root { --main: #185adb; --bg1: #f4f9ff; }
     html, body { height: 100%; min-height: 100%; }
     body {
-      background: #f4f9ff;
+      background: var(--bg1);
       margin: 0; padding: 0;
       min-height: 100vh;
       font-family: 'Montserrat', Arial, sans-serif;
@@ -17,103 +18,120 @@
     #mini-header { flex-shrink: 0;}
     main {
       flex: 1 0 auto;
-      width: 100%; min-height: 80vh;
-      display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
+      width: 100vw;
+      min-height: 80vh;
+      display: flex; flex-direction: column;
+      align-items: stretch; justify-content: flex-start;
     }
-    .chat-main-card {
-      margin: 28px 0 24px 0;
-      width: 97vw; max-width: 1200px; min-height: 670px;
-      background: #fff;
-      border-radius: 24px;
-      box-shadow: 0 8px 32px #185adb1a;
-      display: flex; flex-direction: column; padding: 0;
+    /* Header ngang nhỏ gọn */
+    .mini-header {
+      display: flex; align-items: center;
+      background: #fff; box-shadow: 0 1px 8px #185adb09;
+      height: 47px; min-height: 40px; padding: 0 20px 0 10px;
+      border-bottom: 1.2px solid #e3e9f7;
+      position: sticky; top: 0; left: 0; right: 0; z-index: 30;
+      gap: 11px;
     }
-    .mini-title-bar {
-      font-weight: 700; color: #185adb; padding: 15px 0 0 0;
-      text-align: left; font-size: 1.08rem; margin-left:38px; margin-bottom:2px;
-      display: flex; align-items: center; gap: 8px;
+    .home-btn {
+      background: none; border: none;
+      display: flex; align-items: center; justify-content: center;
+      cursor: pointer; border-radius:50%;
+      width: 36px; height: 36px;
+      margin-right: 2px; transition: background 0.14s;
     }
-    .mini-title-bar .icon {width: 23px; height: 23px; border-radius: 50%; background: #eaf3ff;}
-    .api-btns-group {
-      margin-left:auto; display:flex; gap:7px; font-size:0.98rem;
-    }
-    .api-btn, .getkey-btn {
-      background: #f4f7fe; color: #185adb; border: 1px solid #b7d2fa; border-radius: 7px;
-      padding: 4px 12px; font-weight: 600; font-size: 0.97rem; cursor: pointer; transition: background 0.13s;
-      display: flex; align-items: center; gap: 5px; margin-left:5px; text-decoration:none;
-    }
-    .api-btn:hover, .getkey-btn:hover {background:#e7f0ff;}
+    .home-btn:hover {background: #eaf3ff;}
+    .home-btn img {width:22px;height:22px;}
+    .mini-logo {width: 27px; height: 27px; border-radius:50%; margin-right: 9px;}
+    .mini-title {font-weight:700; font-size:1.07rem; color:#185adb;}
+    /* Tab ngang, tối giản */
     .mode-switcher {
-      display: flex; gap: 0; margin: 0 0 7px 0; border-bottom:1.3px solid #e5eefa;
-      background: #fff; justify-content: flex-start; padding-left:38px;
+      display: flex; gap: 0;
+      border-bottom:1.2px solid #e3e9f7;
+      background: none; margin: 0 0 0 0;
+      width: 100%; justify-content: flex-start;
     }
     .mode-btn {
       border: none; background: none;
-      padding: 16px 38px 12px 38px;
+      padding: 15px 34px 10px 34px;
       font-weight: 600; color: #97a4c1; font-size: 1.09rem;
       cursor: pointer; border-bottom: 2.5px solid transparent; outline: none;
-      transition: all .15s;
+      transition: all .13s;
     }
     .mode-btn.active, .mode-btn:focus {
-      color: #185adb; border-bottom: 2.5px solid #185adb; background: #f7faff;
+      color: #185adb; border-bottom: 2.5px solid #185adb; background: none;
     }
+    /* Nút API Key & lấy key */
+    .api-btns-group {margin-left:auto;display:flex;gap:8px;}
+    .api-btn, .getkey-btn {
+      background: #f4f7fe; color: #185adb; border: 1px solid #b7d2fa; border-radius: 7px;
+      padding: 4px 11px; font-weight: 600; font-size: 0.96rem; cursor: pointer; transition: background 0.13s;
+      display: flex; align-items: center; gap: 5px; margin-left:5px; text-decoration:none;
+    }
+    .api-btn:hover, .getkey-btn:hover {background:#e7f0ff;}
+    /* Khung chat siêu rộng */
     .chat-body {
-      flex: 1; padding: 0; overflow-y: auto; background: #f7faff;
-      border-radius: 0 0 24px 24px; display: flex; flex-direction: column; min-height: 420px;
+      flex: 1 1 auto; display: flex; flex-direction: column;
+      min-height: 65vh; width: 100vw; background: none;
     }
     .chat-messages {
-      padding: 34px 48px 8px 48px;
-      overflow-y: auto; flex: 1;
-      min-height: 330px;
-      font-size: 1.11rem;
-      display: flex; flex-direction: column; gap: 7px;
+      width: 100vw; max-width: none;
+      padding: 32px 0 8px 0;
+      margin: 0;
+      min-height: 340px;
+      font-size: 1.12rem;
+      display: flex; flex-direction: column; gap: 10px;
+      background: none; box-shadow: none;
     }
     .msg-row {display: flex;}
     .msg-bubble {
-      max-width: 80vw; min-width: 50px;
-      padding: 13px 19px;
+      max-width: 900px; min-width: 46px;
+      padding: 14px 22px;
       border-radius: 16px;
       font-size: 1.13rem;
       line-height: 1.7;
-      box-shadow: 0 1px 8px #185adb0b;
       white-space: pre-line;
-      margin-bottom: 3px;
-      word-break: break-word;
+      margin-bottom: 3px; word-break: break-word;
+      background: #fff; box-shadow: 0 1px 8px #185adb0a;
+      margin-left: 48px; margin-right: 48px;
     }
     .msg-user {justify-content: flex-end;}
     .msg-user .msg-bubble {
       background: linear-gradient(110deg, #185adb 0%, #356ad2 100%);
       color: #fff; border-bottom-right-radius: 7px;
+      margin-left:auto; margin-right: 48px;
     }
     .msg-ai {justify-content: flex-start;}
     .msg-ai .msg-bubble {
       background: #eaf3ff;
       color: #222; border-bottom-left-radius: 7px;
+      margin-left: 48px; margin-right:auto;
     }
+    /* Input chat full width, không khung */
     .chat-input-bar {
-      display: flex; align-items: flex-end;
-      gap: 13px; background: #f4f7fa;
-      padding: 20px 44px 28px 44px;
-      border-radius: 0 0 24px 24px;
-      border-top: 1.3px solid #e7f0ff;
-      box-shadow: 0 0.5px 0 #e6eef9;
+      display: flex; align-items: flex-end; width:100vw; max-width:none;
+      gap: 14px; background: none;
+      padding: 20px 0 32px 0;
+      border: none; border-radius: 0; box-shadow: none;
+      justify-content: center;
     }
     .chat-input-bar input {
-      flex: 1; font-size: 1.15rem; padding: 15px 17px; border-radius: 16px;
-      border: 1.7px solid #bdd1f6; outline:none; box-shadow:0 1.5px 8px #185adb09;
+      flex: 0 1 800px; width: 68vw; max-width:900px;
+      font-size: 1.18rem; padding: 16px 19px; border-radius: 14px;
+      border: 1.7px solid #bdd1f6; outline:none;
       background: #fff; transition: border 0.16s;
+      margin-right: 11px;
+      box-shadow: 0 1px 12px #185adb0a;
     }
     .chat-input-bar input:focus {border:1.7px solid #185adb;}
     .chat-input-bar button {
-      padding: 0 0 0 0; border: none; background: none;
+      border: none; background: #185adb; color: #fff;
       width: 52px; height: 52px; border-radius: 50%;
-      background: #185adb; color: #fff;
-      font-size: 1.45rem; display:flex; align-items:center;justify-content:center;
-      cursor:pointer; box-shadow:0 2px 10px #185adb1a;
+      font-size: 1.47rem; display:flex; align-items:center;justify-content:center;
+      cursor:pointer; box-shadow:0 2px 10px #185adb18;
       transition: background 0.13s;
     }
     .chat-input-bar button:active {background:#153772;}
-    /* Popup key */
+    /* Popup nhập key */
     .popup-api-bg {position:fixed;left:0;top:0;width:100vw;height:100vh;background:#0007;z-index:999;display:flex;align-items:center;justify-content:center;}
     .popup-api-box {background:#fff;border-radius:13px;padding:32px 34px;box-shadow:0 10px 50px #185adb20;min-width:300px;max-width:94vw;text-align:center;}
     .popup-api-box label {font-size:1.14rem;color:#185adb;font-weight:700;}
@@ -123,52 +141,60 @@
     .popup-api-box button.cancel {background:#e7eaf6;color:#185adb;}
     .popup-api-box button:active {background:#133b86;}
     .popup-api-box .popup-desc {font-size:.98rem;color:#888;margin:7px 0 16px 0;}
-    #footer { flex-shrink: 0; margin-top: 18px; }
-    @media (max-width:1200px) {.chat-main-card{max-width:99vw;}}
-    @media (max-width:750px) {
-      .chat-main-card {margin:8px 0; border-radius:13px;}
-      .chat-messages {padding:11px 2vw 7px 2vw;}
-      .chat-input-bar {padding:7px 2vw 12px 2vw; border-radius:0 0 13px 13px;}
-      .mode-switcher{padding-left:0;}
+    /* Footer sát đáy */
+    #footer { flex-shrink: 0; margin-top: 15px; padding-bottom: 5px;}
+    @media (max-width:1100px){
+      .msg-bubble, .msg-user .msg-bubble, .msg-ai .msg-bubble {max-width:99vw;margin-left:7vw;margin-right:7vw;}
+      .chat-input-bar input{width:90vw;}
+    }
+    @media (max-width:650px){
+      .mini-header{padding:0 5px;}
+      .msg-bubble, .msg-user .msg-bubble, .msg-ai .msg-bubble {margin-left:2vw;margin-right:2vw;}
+      .chat-input-bar input{width:99vw;max-width:99vw;font-size:1.03rem;}
     }
   </style>
 </head>
 <body>
-  <div id="mini-header"></div>
+  <header class="mini-header">
+    <button class="home-btn" onclick="window.location.href='index.html'" title="Trang chủ">
+      <img src="logo.png" alt="Home">
+    </button>
+    <img src="logo.png" alt="Logo" class="mini-logo">
+    <span class="mini-title">Tra Cứu Học Thuật & AI</span>
+  </header>
   <main>
-    <div class="chat-main-card">
-      <div class="mini-title-bar">
-        <img class="icon" src="icon-ai.png" alt="AI">
-        <span>Trợ lý AI học tập</span>
-        <div class="api-btns-group" id="api-btns-group"></div>
+    <div style="display:flex;align-items:center;justify-content:space-between;padding:10px 0 0 0;gap:12px;">
+      <div style="font-weight:700;font-size:1.05rem;color:#185adb;margin-left:24px;display:flex;align-items:center;gap:7px">
+        <img src="icon-ai.png" alt="AI" style="width:22px;height:22px;border-radius:50%;"> Trợ lý AI học tập
       </div>
-      <div class="mode-switcher">
-        <button class="mode-btn active" onclick="switchMode('chatbase')">Chatbase</button>
-        <button class="mode-btn" onclick="switchMode('gpt')">Chat GPT</button>
-        <button class="mode-btn" onclick="switchMode('gemini')">Chat Gemini</button>
+      <div class="api-btns-group" id="api-btns-group" style="margin-right:24px;"></div>
+    </div>
+    <div class="mode-switcher">
+      <button class="mode-btn active" onclick="switchMode('chatbase')">Chatbase</button>
+      <button class="mode-btn" onclick="switchMode('gpt')">Chat GPT</button>
+      <button class="mode-btn" onclick="switchMode('gemini')">Chat Gemini</button>
+    </div>
+    <div class="chat-body">
+      <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;">
+        <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_" width="95%" height="420"
+          style="border-radius:10px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 16px #185adb0d;"
+          allow="clipboard-write"></iframe>
       </div>
-      <div class="chat-body">
-        <div id="chatbase-chat" class="chat-messages" style="display:block;text-align:center;">
-          <iframe src="https://www.chatbase.co/chatbot-iframe/LqqF_1Q5mDRgBiRX2Kpb_" width="98%" height="420"
-            style="border-radius:13px;border:1.5px solid #eee;background:#fff;box-shadow:0 4px 16px #185adb17;"
-            allow="clipboard-write"></iframe>
-        </div>
-        <div id="gpt-chat" class="chat-messages" style="display:none;"></div>
-        <div id="gemini-chat" class="chat-messages" style="display:none;"></div>
-      </div>
-      <div class="chat-input-bar" id="chatbase-input" style="display:none;"></div>
-      <div class="chat-input-bar" id="gpt-input" style="display:none;">
-        <input id="userMsg-gpt" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGPT();}">
-        <button onclick="sendMsgGPT()"><span>&#10148;</span></button>
-      </div>
-      <div class="chat-input-bar" id="gemini-input" style="display:none;">
-        <input id="userMsg-gemini" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGemini();}">
-        <button onclick="sendMsgGemini()"><span>&#10148;</span></button>
-      </div>
+      <div id="gpt-chat" class="chat-messages" style="display:none;"></div>
+      <div id="gemini-chat" class="chat-messages" style="display:none;"></div>
+    </div>
+    <div class="chat-input-bar" id="chatbase-input" style="display:none;"></div>
+    <div class="chat-input-bar" id="gpt-input" style="display:none;">
+      <input id="userMsg-gpt" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGPT();}">
+      <button onclick="sendMsgGPT()"><span>&#10148;</span></button>
+    </div>
+    <div class="chat-input-bar" id="gemini-input" style="display:none;">
+      <input id="userMsg-gemini" type="text" placeholder="Nhập câu hỏi..." autocomplete="off" onkeydown="if(event.key==='Enter'){sendMsgGemini();}">
+      <button onclick="sendMsgGemini()"><span>&#10148;</span></button>
     </div>
   </main>
-  <div id="footer"></div>
-  <!-- Popup nhập API Key luôn đúng tab, fix lỗi không ấn được -->
+  <div id="footer">© 2025 Tra Cứu Học Thuật & AI • Thiết kế bởi KoHa</div>
+  <!-- Popup nhập API Key -->
   <div class="popup-api-bg" id="popup-api" style="display:none;">
     <div class="popup-api-box">
       <label id="popup-label"></label>
@@ -182,10 +208,7 @@
     </div>
   </div>
   <script>
-    // Import header/footer nhỏ
-    fetch('mini-header.html').then(r=>r.text()).then(d=>{document.getElementById('mini-header').innerHTML=d});
-    fetch('footer.html').then(r=>r.text()).then(d=>{document.getElementById('footer').innerHTML=d});
-    // Tabs & API Key
+    // Tab & API Key logic
     let chatMode = 'chatbase';
     function renderApiBtns(mode) {
       const group = document.getElementById('api-btns-group');
@@ -217,7 +240,6 @@
       renderApiBtns(mode);
       scrollToBottom();
     }
-    // API Key lưu riêng từng loại
     function getAPIKey(type) {
       if (type==='gpt') return localStorage.getItem('openai_api_key')||'';
       if (type==='gemini') return localStorage.getItem('gemini_api_key')||'';
@@ -255,7 +277,7 @@
       document.getElementById('popup-desc').innerHTML = desc + "<br>(Chỉ lưu trên trình duyệt, không gửi đi đâu)";
       document.getElementById('popup-api-key').placeholder = ph;
       document.getElementById('popup-api-key').value = getAPIKey(type);
-      setTimeout(()=>{document.getElementById('popup-api-key').focus()}, 120); // Đảm bảo focus
+      setTimeout(()=>{document.getElementById('popup-api-key').focus()}, 120);
     }
     function closeAPIKeyPopup() {document.getElementById('popup-api').style.display = 'none';}
     function saveAPIKey() {
@@ -332,7 +354,6 @@
         document.querySelectorAll('.chat-messages').forEach(box=>{box.scrollTop = box.scrollHeight+77;});
       }, 80);
     }
-    // Luôn khởi tạo đúng key tab
     window.onload = ()=>{renderApiBtns('chatbase');}
   </script>
 </body>
