--- a/mini-header.html
+++ b/mini-header.html
@@ -1,16 +1,25 @@
 <header class="mini-header">
-  <img src="logo.png" alt="Logo" class="mini-logo">
+  <button class="home-btn" onclick="window.location.href='index.html'" title="Trang chủ">
+    <img src="logo.png" alt="Home">
+  </button>
   <span class="mini-title">Tra Cứu Học Thuật & AI</span>
 </header>
 <style>
   .mini-header {
     display: flex; align-items: center;
     background: #fff; box-shadow: 0 1px 8px #185adb09;
-    height: 48px; min-height: 40px; padding: 0 22px;
+    height: 47px; min-height: 40px; padding: 0 15px 0 7px;
     border-bottom: 1.2px solid #e3e9f7;
     position: sticky; top: 0; left: 0; right: 0; z-index: 30;
+    gap: 14px;
   }
-  .mini-logo {width: 28px; height: 28px; border-radius:50%; margin-right: 11px;}
+  .home-btn {
+    background: none; border: none;
+    display: flex; align-items: center; justify-content: center;
+    cursor: pointer; border-radius:50%; width: 33px; height: 33px;
+    margin-right: 7px; transition: background 0.14s;
+  }
+  .home-btn:hover {background: #eaf3ff;}
+  .home-btn img {width:21px;height:21px;}
   .mini-title {font-weight:700; font-size:1.07rem; color:#185adb;}
-  @media (max-width:600px){.mini-header{padding:0 8px;}.mini-logo{width:22px;height:22px;}.mini-title{font-size:0.96rem;}}
 </style>
