--- a/footer.html
+++ b/footer.html
@@ -13,8 +13,34 @@
   border-radius: 24px 24px 0 0;
   letter-spacing: .01em;
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  flex-wrap: wrap;
 ">
-  &copy; 2025 <span style="color:#185adb;font-weight:700;">Tra Cứu Học Thuật &amp; AI</span>
-  <span style="color:#97a4c1;">&bull;</span>
-  <span style="color:#222;font-weight:500;">Thiết kế bởi <span style="color:#185adb;">KoHa</span></span>
+  <span>
+    &copy; 2025 <span style="color:#185adb;font-weight:700;">Tra Cứu Học Thuật &amp; AI</span>
+    <span style="color:#97a4c1;">&bull;</span>
+    <span style="color:#222;font-weight:500;">Thiết kế bởi <span style="color:#185adb;">KoHa</span></span>
+  </span>
+  <span style="display: flex; align-items: center; gap: 9px; margin-left: 12px;">
+    <!-- YouTube -->
+    <a href="https://www.youtube.com/channel/UCH-j549S-5EHFTchh0deQmQ" target="_blank" title="YouTube KoHa"
+      style="display:inline-flex;align-items:center;justify-content:center;width:30px;height:30px;border-radius:50%;background:none;transition:background .17s;">
+      <svg viewBox="0 0 32 32" width="23" height="23" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="16" cy="16" r="16" fill="#fff"/>
+        <path d="M24.8 11.9c-.2-.7-.7-1.2-1.4-1.3-1.7-.3-6.7-.3-6.7-.3s-5 0-6.7.3c-.7.1-1.2.6-1.4 1.3-.3 1.5-.3 4.7-.3 4.7s0 3.2.3 4.7c.2.7.7 1.2 1.4 1.3 1.7.3 6.7.3 6.7.3s5 0 6.7-.3c.7-.1 1.2-.6 1.4-1.3.3-1.5.3-4.7.3-4.7s0-3.2-.3-4.7z" fill="#FF0000"/>
+        <path d="M14.2 18.8l5.2-2.8-5.2-2.8v5.6z" fill="#fff"/>
+      </svg>
+    </a>
+    <!-- Facebook -->
+    <a href="https://www.facebook.com/KOHA200/" target="_blank" title="Facebook KoHa"
+      style="display:inline-flex;align-items:center;justify-content:center;width:30px;height:30px;border-radius:50%;background:none;transition:background .17s;">
+      <svg viewBox="0 0 32 32" width="23" height="23" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="16" cy="16" r="16" fill="#fff"/>
+        <path d="M18.1 16.9h1.7l.3-2.1h-2V13.5c0-.6.2-.9.9-.9h1.2V11h-1.6c-1.8 0-2.4.8-2.4 2.2v1.5h-1.1v2.1h1.1v5.1h2.3v-5.1z" fill="#185adb"/>
+      </svg>
+    </a>
+  </span>
 </footer>
